feat: adding Venta and Producto model, also the connection string to database

--- a/trabajo_finall/appsettings.json
+++ b/trabajo_finall/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=trabajo_final_db;Username=macoticapp_db_user;Password=12345"
+  }
 }
